apps/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: vault
  labels:
    app: vault
spec:
  selector:
    app: vault
  ports:
  - name: vault-port
    port: 8200
    targetPort: 8200
    protocol: TCP
  - name: cluster-port
    port: 8201
    targetPort: 8201
    protocol: TCP
  type: NodePort
